--- a/style.css
+++ b/style.css
@@ -117,15 +117,17 @@ h3{
     background-image: url('asset/images/Frame.png');
     display: flex;
     background-size: cover;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+ 
 }
 .box-1,.box-2,
 .box-3{
     width: 200px;
     height: 150px;
-    margin-left: 10%;
+    margin: 5%;
   box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
+  border: 1px solid  rgb(229, 233, 246, 0.4);
     
 }
 .pra-2{
@@ -178,5 +180,19 @@ h2{
 .box-con{
     flex-direction: column;
 }
+.box-1,.box-2,
+.box-3{
+    width: 200px;
+    height: 150px;
+    margin: 10%;
+  box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
+  border: 1px solid  rgb(229, 233, 246, 0.4);
     
 }
+    
+}
+@media only screen and (max-width: 600px) {
+    .box-1 {
+      width: 100%;
+    }
+  }
