--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h2{
     line-height: 32px;
     padding-bottom: 30px;
     font-weight: 300;
+    font-family: "Mulish";
 }
 
 
@@ -84,6 +85,16 @@ h2{
     color: white;
     
 }
+.btn-3{
+    color: #458FF6;
+    width: 200px;
+    height: 56px;
+    border-radius: 55px;
+    border: 1px solid #458FF6;
+    background-color: white;
+    margin:2% 0 2% 42%;
+
+}
 .btn-2{
     color: #458FF6;
     width: 200px;
@@ -91,37 +102,35 @@ h2{
     border-radius: 55px;
     border: 1px solid #458FF6;
     background-color: white;
+  
 
 }
 .img-2{
     width: 100%;
 }
-hr{
+.hr-1{
     border-style: 15px;
     border-color:rgb(31, 21, 52,0.5) ;
     height: 1px;
     width: 40px;
     margin: 1% 0 4% 48%;
+   
+
+}
+.hr-2{
+    border-style: 15px;
+    border-color:rgb(31, 21, 52,0.5) ;
+    height: 1px;
+    width: 40px;
+    margin: 1% 0 4% 40%;
+    
 
 }
 h3{
     text-align: center;
 }
-.pragra{
-    color:  rgb(31, 21, 52,0.5);
-    font-size: 18px;
-    line-height: 30px;
-    padding-bottom: 30px;
-    font-weight: 300;
-    text-align: center;
 
-}
-.text{
-    width: 70%;
-    height: 30%;
-    align-items: center;
-    margin-left: 180px ;
-}
+
 
 .box-con1{
     background-image: url('asset/images/Frame.png');
@@ -164,6 +173,134 @@ h3{
     
    
 
+}
+
+.pra-4{
+    font-size: 16px;
+    color:  rgb(31, 21, 52,0.5);
+    text-align: center;
+}
+footer{
+    background-color:rgba(90, 152, 242, 1);
+    display: flex;
+    color: white;
+  
+    padding: 50px;
+    
+}
+.hd-1{
+    width: 40%;
+
+}
+.hd-2,.hd-3,.hd-4{
+    width: 20%;
+}
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  .mask-con{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding:0 0 0 10%;
+    
+  
+}
+.mask-1,.mask-2,.mask-3{
+    width: 350px; /* Set a fixed width for the container */
+    height: 350px; /* Set a fixed height for the container */
+    border: 1px solid rgb(229, 233, 246, 0.4); /* Optional: Add a border for visibility */
+    padding: 10px; /* Optional: Add padding */
+    overflow: auto; /* Add scrollbars if content overflows */
+    word-wrap: break-word; /* Ensure long words break to fit within the container */
+    white-space: normal; /* Allow text to wrap */
+
+
+    
+}
+.mask-img{
+    width: 100%;
+}
+.slide-img{
+    width: 100%;
+}
+.out{
+    margin-top: 5%;
+}
+.read{
+    color: #458FF6;
 }
 
 
@@ -214,7 +351,7 @@ h2{
 .box-1{
     width: 200px;
     height: 150px;
-    margin: 10%;
+    margin: 14%;
   box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
   border: 1px solid  rgb(229, 233, 246, 0.4);
     
@@ -228,6 +365,13 @@ h2{
     width: 100%;
     align-items: center;
 }
+.mask-con{
+    flex-direction: column;
+
+}
+.mask-img{
+    width: 100%;
+}
     
 }
 @media only screen and (max-width: 600px) {
@@ -236,7 +380,7 @@ h2{
     }
     .sec01,.sec04{
         width: 100%;
-        margin:0% ;
+        margin:4% ;
       
     
     
@@ -249,4 +393,45 @@ h2{
        
     
     }
-  }
+    .footer{
+        padding: 0;
+    }
+    .hd-1{
+        width: 50%;
+    
+    }
+    .hd-2,.hd-3,.hd-4{
+        width: 50%;
+    }
+    .mask-con{
+        width: 100%;
+        align-items: center;
+        padding: 0;
+        
+      
+    }
+    .mask-1,.mask-2,.mask-3{
+        padding: 0;
+    }
+    .slide-img{
+        width: 80%;
+    }
+    .slideshow-container {
+        max-width: 400px;
+       
+        margin: auto;
+      }
+  
+
+
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+  .prev, .next,.text {font-size: 11px}
+}
+}
