--- a/style.css
+++ b/style.css
@@ -105,12 +105,22 @@ h2{
   
 
 }
+.btn-4{
+    color: #458FF6;
+    width: 200px;
+    height: 56px;
+    border-radius: 55px;
+    border: 1px solid #458FF6;
+    background-color: white;
+    margin:2% 0 2% 42%;
+
+}
 .img-2{
     width: 100%;
 }
 .hr-1{
     border-style: 15px;
-    border-color:rgb(31, 21, 52,0.5) ;
+    border-color:rgb(31, 21, 52,1) ;
     height: 1px;
     width: 40px;
     margin: 1% 0 4% 48%;
@@ -119,7 +129,7 @@ h2{
 }
 .hr-2{
     border-style: 15px;
-    border-color:rgb(31, 21, 52,0.5) ;
+    border-color:rgb(31, 21, 52,1) ;
     height: 1px;
     width: 40px;
     margin: 1% 0 4% 40%;
@@ -181,23 +191,48 @@ h3{
     text-align: center;
 }
 footer{
-    background-color:rgba(90, 152, 242, 1);
+    width: 100%;
+   
     display: flex;
+    background-color:rgba(90, 152, 242, 1);
+ 
+}
+
+.traf{
+
+    width: 50%;
     color: white;
-  
     padding: 50px;
+    display: flex;
+   
+
+}
+
+.traf-1{
+ 
+    width: 50%;
+
+    color: white;
+    padding: 50px;
+    display: flex;
+ 
+
+
     
 }
 .hd-1{
-    width: 40%;
-
+    width: 70%;
 }
 .hd-2,.hd-3,.hd-4{
-    width: 20%;
+    width: 30%;
+
 }
+
+
+
 /* Slideshow container */
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 1100px;
     position: relative;
     margin: auto;
   }
@@ -275,7 +310,7 @@ footer{
     display: flex;
     align-items: center;
     padding:0 0 0 10%;
-    
+    background-image: url('asset/images/element.png');
   
 }
 .mask-1,.mask-2,.mask-3{
@@ -302,6 +337,10 @@ footer{
 .read{
     color: #458FF6;
 }
+h5{
+    font-size: 18px;
+}
+
 
 
 @media (max-width:600px) {
@@ -393,16 +432,17 @@ h2{
        
     
     }
-    .footer{
-        padding: 0;
+    .traf-1,.traf{
+        flex-direction: column;
+        line-height: 25px;
+        
+        
     }
-    .hd-1{
-        width: 50%;
-    
-    }
-    .hd-2,.hd-3,.hd-4{
-        width: 50%;
-    }
+ .hd-2,.hd-3{
+    margin: 10% 0 0 0;
+ }
+ 
+   
     .mask-con{
         width: 100%;
         align-items: center;
@@ -414,14 +454,16 @@ h2{
         padding: 0;
     }
     .slide-img{
-        width: 80%;
+        width: 100%;
     }
     .slideshow-container {
         max-width: 400px;
        
-        margin: auto;
+        margin:10%;
       }
-  
+  .btn-4,.btn-3{
+    margin:2% 0 2% 30%;
+  }
 
 
 
