--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ h2{
     border-radius: 55px;
     border: 1px solid #458FF6;
     background-color: white;
+    margin: 0 0 0 12%;
   
 
 }
@@ -112,7 +113,7 @@ h2{
     border-radius: 55px;
     border: 1px solid #458FF6;
     background-color: white;
-    margin:2% 0 2% 42%;
+    margin:2% 0 2% 45%;
 
 }
 .img-2{
@@ -139,47 +140,67 @@ h2{
 h3{
     text-align: center;
 }
+.wall-box{
+    background-image: url('asset/images/Frame.png');
+    background-size: cover;
+    background-position:center;
+    width: 60%;
+    margin: 0 0 0 15%;
+
+}
 
 
 
 .box-con1{
-    background-image: url('asset/images/Frame.png');
+    
+
     display: flex;
-    background-size: cover;
-    justify-content: space-between;
-    align-items: center;
+   
+   align-items: center;
 
 }
 
 .box-2{
-    width: 200px;
-    height: 150px;
-    margin:6%;
+    width: 250px;
+    height: 250px;
+    margin:5% 0 0 14%;
   box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
   border: 1px solid  rgb(229, 233, 246, 0.4);
+  border-radius: 20px;
+
     
 }
 .pra-2,.pra-3{
     font-size: 16px;
     color:  rgb(31, 21, 52,0.5);
     text-align: center;
+    line-height: 28px;
 }
 
 .con-3,.con-4{
     display: flex;
-    width: 100%;
+    width: 80%;
 }
-.sec01,.sec04{
-    width: 70%;
-    margin:12% ;
+.sec01{
+    width: 60%;
+    margin:10% 0 10% 10% ;
+
+}
+.sec02{
+    width: 40%;
+    margin:10% 0 10% 10% ;
   
 
 
 }
 
-.sec02,.sec03{
-    width: 30%;
-    margin: 12%;
+.sec03{
+    width: 40%;
+    margin:10% 0 10% 10% ;
+}
+.sec04{
+    width: 60%;
+    margin:10% 0% 10% 15%;
     
    
 
@@ -189,6 +210,7 @@ h3{
     font-size: 16px;
     color:  rgb(31, 21, 52,0.5);
     text-align: center;
+    line-height: 28px;
 }
 footer{
     width: 100%;
@@ -306,27 +328,29 @@ footer{
     animation-duration: 1.5s;
   }
   .mask-con{
-    width: 100%;
+    width: 80%;
     display: flex;
     align-items: center;
-    padding:0 0 0 10%;
+    padding:0 0 0 20%;
     background-image: url('asset/images/element.png');
   
 }
 .mask-1,.mask-2,.mask-3{
     width: 350px; /* Set a fixed width for the container */
-    height: 350px; /* Set a fixed height for the container */
+    height: 380px; /* Set a fixed height for the container */
     border: 1px solid rgb(229, 233, 246, 0.4); /* Optional: Add a border for visibility */
     padding: 10px; /* Optional: Add padding */
     overflow: auto; /* Add scrollbars if content overflows */
     word-wrap: break-word; /* Ensure long words break to fit within the container */
     white-space: normal; /* Allow text to wrap */
+    border-radius: 20px;
 
 
     
 }
 .mask-img{
     width: 100%;
+
 }
 .slide-img{
     width: 100%;
@@ -339,6 +363,12 @@ footer{
 }
 h5{
     font-size: 18px;
+}
+.traf-1,.traf{
+    line-height: 38px;
+    font-size: 18px;
+    
+    
 }
 
 
@@ -406,6 +436,7 @@ h2{
 }
 .mask-con{
     flex-direction: column;
+    
 
 }
 .mask-img{
@@ -434,7 +465,8 @@ h2{
     }
     .traf-1,.traf{
         flex-direction: column;
-        line-height: 25px;
+        line-height: 38px;
+        font-size: 18px;
         
         
     }
@@ -452,6 +484,7 @@ h2{
     }
     .mask-1,.mask-2,.mask-3{
         padding: 0;
+        
     }
     .slide-img{
         width: 100%;
@@ -475,5 +508,38 @@ h2{
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
   .prev, .next,.text {font-size: 11px}
+}
+}
+@media only screen and (max-width: 768px){
+
+  
+
+.box-2{
+ 
+    margin:5% 5% 5% 5%;
+}
+
+
+
+header{
+    width: 100%;
+   
+    padding:30px 30px;
+}
+}
+@media only screen and (max-width: 820px){
+
+
+.box-2{
+ 
+    margin:5% 5% 5% 5%;
+}
+
+
+
+header{
+    width: 80%;
+   
+    padding:30px 20px;
 }
 }
