--- a/style2.css
+++ b/style2.css
@@ -6,7 +6,7 @@
 body{
 
     font-family: "Mulish", sans-serif;
-    
+  
 }
 header{
     width: 100%;
@@ -70,11 +70,10 @@ h2{
 
 
 .left-con{
-    width: 445px;
-    height: 338px;
+    width: 100%;
+  
 }
 
-    
 
 .btn-1{
     background-color: #458FF6;
@@ -84,37 +83,6 @@ h2{
     border: none;
     color: white;
     
-}
-.btn-3{
-    color: #458FF6;
-    width: 200px;
-    height: 56px;
-    border-radius: 55px;
-    border: 1px solid #458FF6;
-    background-color: white;
-    margin:2% 0 2% 42%;
-
-}
-.btn-2{
-    color: #458FF6;
-    width: 200px;
-    height: 56px;
-    border-radius: 55px;
-    border: 1px solid #458FF6;
-    background-color: white;
-    margin: 0 0 0 12%;
-  
-
-}
-.btn-4{
-    color: #458FF6;
-    width: 200px;
-    height: 56px;
-    border-radius: 55px;
-    border: 1px solid #458FF6;
-    background-color: white;
-    margin:2% 0 2% 45%;
-
 }
 .img-2{
     width: 100%;
@@ -128,6 +96,42 @@ h2{
    
 
 }
+h3{
+    text-align: center;
+    font-family: "Mulish";
+
+}
+.pra-2,.pra-3{
+    font-size: 16px;
+    color:  rgb(31, 21, 52,0.5);
+    text-align: center;
+    line-height: 28px;
+}
+.service{
+    width: 60%;
+    margin:10% 0 10% 20%;
+
+}
+.wall-box{
+    background-image: url('asset/images/Frame.png');
+    background-size: cover;
+    background-position:center;
+    width: 60%;
+    margin: 0 0 0 15%;
+    
+
+}
+.btn-2{
+    color: #458FF6;
+    width: 200px;
+    height: 56px;
+    border-radius: 55px;
+    border: 1px solid #458FF6;
+    background-color: white;
+    margin: 0 0 0 12%;
+  
+
+}
 .hr-2{
     border-style: 15px;
     border-color:rgb(31, 21, 52,1) ;
@@ -137,47 +141,6 @@ h2{
     
 
 }
-h3{
-    text-align: center;
-    font-family: "Mulish";
-}
-.wall-box{
-    background-image: url('asset/images/Frame.png');
-    background-size: cover;
-    background-position:center;
-    width: 60%;
-    margin: 0 0 0 15%;
-
-}
-
-
-
-.box-con1{
-    
-
-    display: flex;
-   
-   align-items: center;
-
-}
-
-.box-2{
-    width: 250px;
-    height: 250px;
-    margin:5% 0 0 14%;
-  box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
-  border: 1px solid  rgb(229, 233, 246, 0.4);
-  border-radius: 20px;
-
-    
-}
-.pra-2,.pra-3{
-    font-size: 16px;
-    color:  rgb(31, 21, 52,0.5);
-    text-align: center;
-    line-height: 28px;
-}
-
 .con-3,.con-4{
     display: flex;
     width: 80%;
@@ -213,43 +176,91 @@ h3{
     text-align: start;
     line-height: 28px;
 }
-footer{
-    width: 100%;
-   
-    display: flex;
-    background-color:rgba(90, 152, 242, 1);
- 
-}
 
-.traf{
 
-    width: 50%;
-    color: white;
-    padding: 50px;
+
+.box-con1{
+    
+
     display: flex;
    
+   align-items: center;
 
 }
 
-.traf-1{
- 
-    width: 50%;
+.box-2{
+    width: 250px;
+    height: 250px;
+    margin:5% 0 0 14%;
+  box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
+  border: 1px solid  rgb(229, 233, 246, 0.4);
+  border-radius: 20px;
 
-    color: white;
-    padding: 50px;
-    display: flex;
- 
     
 }
-.hd-1{
-    width: 70%;
-}
-.hd-2,.hd-3,.hd-4{
-    width: 30%;
+.btn-3{
+    color: #458FF6;
+    width: 200px;
+    height: 56px;
+    border-radius: 55px;
+    border: 1px solid #458FF6;
+    background-color: white;
+    margin:2% 0 2% 42%;
 
 }
+.btn-4{
+    color: #458FF6;
+    width: 200px;
+    height: 56px;
+    border-radius: 55px;
+    border: 1px solid #458FF6;
+    background-color: white;
+    margin:2% 0 2% 45%;
+
+}
+
+.mask-con{
+  width: 80%;
+  display: flex;
+  text-align: start;
+  padding:0 0 0 20%;
+ 
+
+}
+.mask-sec{
+  background-image: url('asset/images/element.png');
+  background-repeat: no-repeat;
+  
+}
+.mask-1,.mask-2,.mask-3{
+  width: 350px; /* Set a fixed width for the container */
+  height: 380px; /* Set a fixed height for the container */
+  border: 1px solid rgb(229, 233, 246, 0.4); /* Optional: Add a border for visibility */
+  padding: 10px; /* Optional: Add padding */
+  overflow: auto; /* Add scrollbars if content overflows */
+  word-wrap: break-word; /* Ensure long words break to fit within the container */
+  white-space: normal; /* Allow text to wrap */
+  border-radius: 20px;
 
 
+  
+}
+.mask-img{
+  width: 100%;
+
+}
+.slide-img{
+  width: 100%;
+}
+.out{
+  margin-top: 5%;
+}
+.read{
+  color: #458FF6;
+}
+h5{
+  font-size: 18px;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -326,53 +337,7 @@ footer{
     animation-name: fade;
     animation-duration: 1.5s;
   }
-  .mask-con{
-    width: 80%;
-    display: flex;
-    text-align: start;
-    padding:0 0 0 20%;
-   
-  
-}
-.mask-sec{
-    background-image: url('asset/images/element.png');
-}
-.mask-1,.mask-2,.mask-3{
-    width: 350px; /* Set a fixed width for the container */
-    height: 380px; /* Set a fixed height for the container */
-    border: 1px solid rgb(229, 233, 246, 0.4); /* Optional: Add a border for visibility */
-    padding: 10px; /* Optional: Add padding */
-    overflow: auto; /* Add scrollbars if content overflows */
-    word-wrap: break-word; /* Ensure long words break to fit within the container */
-    white-space: normal; /* Allow text to wrap */
-    border-radius: 20px;
-
-
-    
-}
-.mask-img{
-    width: 100%;
-
-}
-.slide-img{
-    width: 100%;
-}
-.out{
-    margin-top: 5%;
-}
-.read{
-    color: #458FF6;
-}
-h5{
-    font-size: 18px;
-}
-.traf-1,.traf{
-    line-height: 38px;
-    font-size: 18px;
-    
-    
-}
-.hd-t{
+  .hd-t{
     background-color: white;
     color: #458FF6;
     border-radius: 50px;
@@ -389,6 +354,42 @@ h5{
     font-size: 24px;
      font-family: "Mulish"
 }
+
+
+.traf-1{
+    display: flex;
+    color: aliceblue;
+    width: 30%;
+    gap: 80px;
+    margin: 3%;
+
+  
+}
+.traf{
+    width: 70%;
+    color: aliceblue;
+    margin: 3%;
+    line-height: 38px;
+    font-size: 18px;
+
+
+
+}
+footer{
+width: 100%;
+
+display: flex;
+background-color:rgba(90, 152, 242, 1);
+
+
+
+}
+.hd-2{
+width: 10%;
+line-height: 38px;
+font-size: 18px;
+}
+
 @media (min-width:760px) and (max-width:1030px){
     header{
         width: 100%;
@@ -404,29 +405,66 @@ h5{
     .left-div{
         width: 80%;
     }
-    .box-con1{
+    .box-con,.box-con1,.box-3{
         flex-direction: column;
+        align-items: center;
     }
-    main{
-        flex-direction: column;
-        padding: 10%;
+    .box-1{
+        width: 200px;
+        height: 150px;
+        margin: 14%;
+      box-shadow: 10px 40px 50px 0px rgb(229, 233, 246, 0.4);
+      border: 1px solid  rgb(229, 233, 246, 0.4);
+        
     }
-    .main-1,.main-2{
-        width: 100%;
+    .wall-box{
+        background-image: url('asset/images/Frame.png');
+        background-size: contain;
+        background-position:center;
+        background-repeat: repeat;
+        width: 60%;
+        
+    
+    
     }
     .mask-con{
+        width: 100%;
+        align-items: center;
+        padding: 0;
         flex-direction: column;
+        
+      
     }
-   
-
-
-
-
+    .mask-1,.mask-2,.mask-3{
+        padding: 0;
+        
+    }
+    .slide-img{
+        width: 100%;
+    }
+  
+.traf-1{
+    flex-direction: column;
+}
     
 }
-
-
-
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  /* On smaller screens, decrease text size */
+  @media only screen and (max-width: 600px) {
+    .prev, .next,.text {font-size: 11px}
+    .slide-img{
+        width: 100%;
+    }
+    .slideshow-container {
+        max-width: 400px;
+       
+        margin:10%;
+      }
+  }
 @media (max-width:600px) {
   
   
@@ -463,11 +501,6 @@ h2{
 .pra{
     font-size: 18px;
 }
-.text{
-    margin-left: 50px;
-    
-
-}
 .box-con,.box-con1,.box-3{
     flex-direction: column;
     align-items: center;
@@ -480,89 +513,51 @@ h2{
   border: 1px solid  rgb(229, 233, 246, 0.4);
     
 }
-.con-3,.con-4{
+.wall-box{
+    background-image: url('asset/images/Frame.png');
+    background-size: contain;
+    background-position:center;
+    background-repeat: repeat;
+    width: 60%;
+
+
+}
+.box-1 {
+    width: 100%;
+  }
+ 
+
+  .con-3,.con-4{
     flex-direction: column;
     width: 100%;
     align-items: center;
 }
 .sec01,.sec02,.sec03,.sec04{
+    width: 80%;
+    align-items: center;
+  
+}
+
+  
+.mask-con{
     width: 100%;
     align-items: center;
-}
-.mask-con{
+    padding: 0;
     flex-direction: column;
     
-
+  
 }
-.mask-img{
+.mask-1,.mask-2,.mask-3{
+    padding: 0;
+    
+}
+.slide-img{
     width: 100%;
 }
-    
-}
-@media only screen and (max-width: 600px) {
-    .box-1 {
-      width: 100%;
-    }
-    .sec01,.sec04{
-        width: 100%;
-        margin:4% ;
-      
-    
-    
-    }
-    
-    .sec02,.sec03{
-        width: 50%;
-        margin: 5%;
-        
-       
-    
-    }
-    .traf-1,.traf{
-        flex-direction: column;
-        
-        
-        
-    }
- .hd-2,.hd-3{
-    margin: 10% 0 0 0;
- }
- 
-   
-    .mask-con{
-        width: 100%;
-        align-items: center;
-        padding: 0;
-        
-      
-    }
-    .mask-1,.mask-2,.mask-3{
-        padding: 0;
-        
-    }
-    .slide-img{
-        width: 100%;
-    }
-    .slideshow-container {
-        max-width: 400px;
-       
-        margin:10%;
-      }
-  .btn-4,.btn-3{
-    margin:2% 0 2% 30%;
-  }
 
-
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 600px) {
-  .prev, .next,.text {font-size: 11px}
-}
+.traf-1{
+    flex-direction: column;
 }
 
 
+}
