--- a/style.css
+++ b/style.css
@@ -11,10 +11,10 @@
 body{
    
     font-family: "Rubik",sans-serif;
-    overflow:scroll;
+   
     background-color: white;
     overflow-x: hidden !important;
-overflow: auto;
+
   
     
 }
@@ -270,6 +270,16 @@ overflow: auto;
 
 
 @media (min-width:760px) and (max-width:1030px){
+    body{
+   
+        font-family: "Rubik",sans-serif;
+       
+        background-color: white;
+        overflow-x: hidden !important;
+    
+      
+        
+    }
     .business{
         flex-direction: column;
     }
@@ -340,8 +350,15 @@ overflow: auto;
 
 }
 @media (max-width:600px){
-    body {
+    body{
+   
+        font-family: "Rubik",sans-serif;
+       
+        background-color: white;
         overflow-x: hidden !important;
+    
+      
+        
     }
     .nav-item{
         padding: 0;
